--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="information">
             <h2>Information</h2>
             <hr>
-            <ul>
+            <ul class="list">
                 <li>Adress: Ciudad Autónoma de Buenos Aires (CABA)</li>
                 <li>Nationality: Argentina</li>
                 <li>Age: <span id="age"></span></li>
@@ -32,9 +32,9 @@
     <main class="about_me">
         <h2>Skills</h2>
         <hr>
-        <div class="skills">
+        <div>
             
-            <ul>
+            <ul class="list">
                 <li><p>Programming languages: C, C++, Python, Javascrip</p></li>
                 <li><p>Other languages: HTML, CSS, MySQL</p></li>
                 <li><p>Object Oriented Programming (OOP)</p></li>
