--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="education">
             <div class="place"><a href="https://www.frba.utn.edu.ar/" target="_blank"><img src="img/utn v3.png" class="place_icon"></a></div>
-            <div class="place"><p>UTN-FRBA University</p></div>
+            <div class="place"><a href="https://www.frba.utn.edu.ar/" target="_blank"><p>UTN-FRBA University</p></a></div>
             
             <div class="info"><p>Informatic Engineering</p></div>
             <div class="info"><p>Progress 10/35</p></div>
@@ -54,8 +54,8 @@
         </div>
 
         <div class="education">
-            <div class="place"><a href="" target="_blank"><img src="img/sch v3.png" class="place_icon"></a></div>
-            <div class="place"><p>Schönthal School</p></div>
+            <div class="place"><a href="https://www.schonthal.esc.edu.ar/" target="_blank"><img src="img/sch v3.png" class="place_icon"></a></div>
+            <div class="place"><a href="https://www.schonthal.esc.edu.ar/" target="_blank"><p>Schönthal School</p></a></div>
 
             <div class="info"><p>Secondary Education Qualification</p></div>
             <div class="info"><p>Graduated in: 12/2014</p></div>
@@ -64,8 +64,8 @@
         <h2>Courses</h2>
         <hr>
         <div class="education">
-            <div class="place"><a href="" target="_blank"><img src="img/udemy v3.png" class="place_icon"></a></div>
-            <div class="place"><p>Udemy e-learning</p></div>
+            <div class="place"><a href="https://www.udemy.com/user/federico-augusto-dos-santos/" target="_blank"><img src="img/udemy v3.png" class="place_icon"></a></div>
+            <div class="place"><a href="https://www.udemy.com/user/federico-augusto-dos-santos/" target="_blank"><p>Udemy e-learning</p></a></div>
 
             <div class="info">
                 <p>Object Oriented Programming in Javascript</p>
@@ -75,8 +75,8 @@
         </div>
 
         <div class="education">
-            <div class="place"><a href="" target="_blank"><img src="img/codigo facilito v3.png" class="place_icon"></a></div>
-            <div class="place"><p>Código Facilito</p></div>
+            <div class="place"><a href="https://codigofacilito.com/usuarios/fede2santos96" target="_blank"><img src="img/codigo facilito v3.png" class="place_icon"></a></div>
+            <div class="place"><a href="https://codigofacilito.com/usuarios/fede2santos96" target="_blank"><p>Código Facilito</p></a></div>
 
             <div class="info">
                 <p>Git Professional Course</p>
@@ -89,6 +89,8 @@
     <footer>
 
     </footer>
+
+    <script src="my script.js"></script>
     
 </body>
 </html>
