--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li>Age: <span id="age"></span></li>
                 <li>Phone: +54 1139353557</li>
                 <li>Email: fede.2santos_96@hotmail.com</li>
+                <li>Student's email: fdossantos@frba.utn.edu.ar</li>
                 <li><a href="https://www.linkedin.com/in/fede2s/" target="_blank"><img src="img/LinkedIn v5.png" class="icon">linkedin.com/in/fede2s</a></li>
                 <li><a href="https://www.github.com/fede2s/" target="_blank"><img src="img/github v5.png" class="icon">github.com/fede2s</a></li>
             </ul>
