--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="presentation">
         <div class="intro">
-            <img src="img/Profile.PNG" class="profile">
+            <img src="/img/1E1F9602-A575-482D-A6D3-3E8EDAF139D0.jpeg" class="profile">
             <p>Hi, my name is Federico, i'm an informatic student and i'm looking for my first IT job </p>
         </div>
         <div class="information">
