--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="intro">
             <img src="img/profile-low-res.jpg" class="profile-low-res">
             <img src="img/profile-mid-res.jpg" class="profile-mid-res">
-            <img src="img/Profile3.jpg" class="profile-hig-res">
+            <img src="img/profile-hig-res.jpg" class="profile-hig-res">
             <p>Hi, my name is Federico, i'm an informatic student and i'm looking for my first IT job </p>
         </div>
 
