--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="qr">
-            <img src="img/qr.jpg" class="profile">
+            <img src="img/qr.jpg" class="qr-img">
             <p>Scan my QR to watch my updated profile online!</p>
         </div>
 
