--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     
     <header class="presentation">
         <div class="intro">
-            <img src="img/profile-low-res.jpg" class="profile-low-res">
-            <img src="img/profile-mid-res.jpg" class="profile-mid-res">
-            <img src="img/profile-hig-res.jpg" class="profile-hig-res">
+            <img src="img/profile3.jpg" class="profile">
             <p>Hi, my name is Federico, i'm an informatic student and i'm looking for my first IT job </p>
         </div>
 
