Add functional programming to my resume

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         <div>
             
             <ul class="list">
-                <li><p>Programming languages: C, C++, Python, Javascript</p></li>
+                <li><p>Paradigms: Object Oriented Programming (OOP) & Functional Programming</p></li>
+                <li><p>Programming languages: C, C++, Haskell, Python, Javascript</p></li>
                 <li><p>Other languages: HTML, CSS, MySQL</p></li>
                 <li><p>Responsive Design Web Pages</p></li>
-                <li><p>Object Oriented Programming (OOP)</p></li>
             </ul>
         </div>
 
