--- a/index.html
+++ b/index.html
@@ -4,17 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Federico dos Santos's RESUME</title>
+    <title>Federico dos Santos - RESUME</title>
     <link rel="stylesheet" href="My Styles.css">
 </head>
 <body>
+
+    <div class="mainBar">
+        <div class="button-menu" id="button-menu" onclick="buttonMenu()">
+            <div class="littleBar1"></div>
+            <div class="littleBar2"></div>
+            <div class="littleBar3"></div>
+        </div>
+    </div>
+    <div class="menu" id = "menu">
+        <div class="menu-option" onclick="closeMenu();sorry();">Print Presentation Card</div>
+        <div class="menu-option" onclick="closeMenu();print();">Print RESUME</div>
+        <a href="https://www.instagram.com/fede2santos/" target="_blank" class="menu-option" onclick="closeMenu()">Instagram</a>
+        <div class="menu-option" onclick="closeMenu();sorry();">Whatsapp me</div>
+        <div class="menu-option" onclick="closeMenu();sorry();">Read about me</div>
+        <div class="menu-option" onclick="closeMenu();sorry();">My other webpage</div>
+        
+    </div>
 
     <div class="me"><h1>Federico dos Santos</h1></div>
     
     <header class="presentation">
         <div class="intro">
             <img src="img/profile3.jpg" class="profile">
-            <p>Hi, my name is Federico, i'm an informatic student and i'm looking for my first IT job </p>
+            <p>I'm studying Information Systems Engineering and looking for my first IT job </p>
         </div>
 
         <div class="qr">
