deleting trash files and making work diferent sections

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="menu-option" onclick="closeMenu();sorry();">Print Presentation Card</div>
         <div class="menu-option" onclick="closeMenu();print();">Print RESUME</div>
         <a href="https://www.instagram.com/fede2santos/" target="_blank" class="menu-option" onclick="closeMenu()">Instagram</a>
-        <div class="menu-option" onclick="closeMenu();sorry();">Whatsapp me</div>
-        <div class="menu-option" onclick="closeMenu();sorry();">Read about me</div>
+        <a href="https://wa.me/541139353557?text=Hola%2C%20Federico%2E%20Estuve%20viendo%20tu%20CV%20y%20me%20interesaría%20hablar%20con%20vos" target="_blank" class="menu-option" onclick="closeMenu();">Whatsapp me</a>
+        <a href="#about_me" class="menu-option" onclick="closeMenu()">Read about me</a>
         <div class="menu-option" onclick="closeMenu();sorry();">My other webpage</div>
         
     </div>
@@ -57,11 +57,10 @@
 
     </header>
 
-    <main class="about_me">
+    <main class="about_me" id="about_me">
         <h2>Skills</h2>
         <hr>
         <div>
-            
             <ul class="list">
                 <li><p>Paradigms: Object Oriented Programming (OOP) & Functional Programming</p></li>
                 <li><p>Programming languages: C, C++, Haskell, Python, Javascript</p></li>
