--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <div class="littleBar2"></div>
             <div class="littleBar3"></div>
         </div>
+        <div class="me2">Federico dos Santos</div>
     </div>
     <div class="menu" id = "menu">
         <div class="menu-option" onclick="closeMenu();sorry();">Print Presentation Card</div>
@@ -26,7 +27,7 @@
         
     </div>
 
-    <div class="me"><h1>Federico dos Santos</h1></div>
+    <!--<div class="me"><h1>Federico dos Santos</h1></div> -->
     
     <header class="presentation">
         <div class="intro">
