correcting flex containers

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <div class="qr">
             <img src="img/qr.jpg" class="qr-img">
-            <p>Scan my QR to watch my updated profile online!</p>
+            <p>Scan my QR to see my updated RESUME!</p>
         </div>
 
         <div class="information">
