uploading video resume

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 </head>
 <body>
 
+    <div class="videoContainer" id="videoContainer">
+        <div class="xButton" id="xButton"></div>
+        <!--<video src="https://youtu.be/sUCca_54RZ8" class="video" controls></video>-->
+        <iframe src="https://www.youtube.com/embed/sUCca_54RZ8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video" poster="img/video.jpeg"></iframe>
+    </div>
     <div class="mainBar">
-        <div class="button-menu" id="button-menu" onclick="buttonMenu()">
+        <div class="button-menu" id="button-menu" >
             <div class="littleBar1"></div>
             <div class="littleBar2"></div>
             <div class="littleBar3"></div>
