adding a button for view again my video

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="videoContainer" id="videoContainer">
         <div class="xButton" id="xButton"></div>
         <!--<video src="https://youtu.be/sUCca_54RZ8" class="video" controls></video>-->
-        <iframe src="https://www.youtube.com/embed/sUCca_54RZ8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video" poster="img/video.jpeg"></iframe>
+        <iframe src="https://www.youtube.com/embed/sUCca_54RZ8" title="My RESUME video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video" poster="img/video.jpeg"></iframe>
     </div>
     <div class="mainBar">
         <div class="button-menu" id="button-menu" >
@@ -23,7 +23,7 @@
         <div class="me2">Federico dos Santos</div>
     </div>
     <div class="menu" id = "menu">
-        <div class="menu-option" onclick="closeMenu();sorry();">Print Presentation Card</div>
+        <div class="menu-option" onclick="closeMenu();viewVideo();">View Video RESUME</div>
         <div class="menu-option" onclick="closeMenu();print();">Print RESUME</div>
         <a href="https://www.instagram.com/fede2santos/" target="_blank" class="menu-option" onclick="closeMenu()">Instagram</a>
         <a href="https://wa.me/541139353557?text=Hola%2C%20Federico%2E%20Estuve%20viendo%20tu%20CV%20y%20me%20interesaría%20hablar%20con%20vos" target="_blank" class="menu-option" onclick="closeMenu();">Whatsapp me</a>
