take an innecesary attribute out

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="videoContainer" id="videoContainer">
         <div class="xButton" id="xButton"></div>
         <!--<video src="https://youtu.be/sUCca_54RZ8" class="video" controls></video>-->
-        <iframe src="https://www.youtube.com/embed/sUCca_54RZ8" title="My RESUME video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video" poster="img/video.jpeg"></iframe>
+        <iframe src="https://www.youtube.com/embed/sUCca_54RZ8" title="My RESUME video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
     </div>
     <div class="mainBar">
         <div class="button-menu" id="button-menu" >
