--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Federico dos Santos - RESUME</title>
     <link rel="stylesheet" href="My Styles.css">
+    <link rel="shortcut icon" href="https://www.flaticon.es/svg/vstatic/svg/3135/3135715.svg?token=exp=1620869790~hmac=b52b3628e086d4a9f98c31265855a359" type="image/x-icon">
+
 </head>
 <body>
 
