Dropping some divs and an image

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <h2>Information</h2>
             <hr>
             <ul class="list1">
-                <li><div class="icon"></div> Age: <span id="age"></span></li>
-                <li><div class="icon"></div> Adress: Ciudad Autónoma de Buenos Aires (CABA)</li>
-                <li><div class="icon"></div> Nationality: Argentina</li>
+                <li> Age: <span id="age"></span></li>
+                <li> Adress: Ciudad Autónoma de Buenos Aires (CABA)</li>
+                <li> Nationality: Argentina</li>
                 <li><a href="https://wa.me/541139353557?text=Hola%2C%20Federico%2E%20Estuve%20viendo%20tu%20CV%20y%20me%20interesaría%20hablar%20con%20vos" target="_blank"><img src="icons/wpp.svg" class="icon"> Phone: +54 11 39353557</a></li>
                 <li><a href="mailto:fede.2santos_96@hotmail.com"><img src="icons/outlook.svg" class="icon"> Email: fede.2santos_96@hotmail.com</a></li>
                 <li>
