adding download pdf option, reducting css code

--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
     <div class="menu" id = "menu">
         <div class="menu-option" id="viewVideo">View Video RESUME</div>
         <div class="menu-option" id="printRESUME">Print RESUME</div>
-        <a href="https://www.instagram.com/fede2santos/" target="_blank" class="menu-option" onclick="closeMenu()">Instagram</a>
-        <a href="https://wa.me/541139353557?text=Hola%2C%20Federico%2E%20Estuve%20viendo%20tu%20CV%20y%20me%20interesaría%20hablar%20con%20vos" target="_blank" class="menu-option" id="menu-option" onclick="closeMenu()">Whatsapp me</a>
-        <a href="#about_me" class="menu-option" onclick="closeMenu()">Read about me</a>
+        <a href="pdf/Federico dos Santos - RESUME.pdf" download="Federico dos Santos - RESUME" class="menu-option">Download the PDF version</a>
         <a href="https://www.github.com/fede2s/" target="_blank" class="menu-option" onclick="closeMenu()">My Portfolio</a>
+        <a href="https://wa.me/541139353557?text=Hola%2C%20Federico%2E%20Estuve%20viendo%20tu%20CV%20y%20me%20interesaría%20hablar%20con%20vos" target="_blank" class="menu-option" id="menu-option" onclick="closeMenu()">Whatsapp me</a>
+        <a href="https://www.instagram.com/fede2santos/" target="_blank" class="menu-option" onclick="closeMenu()">Follow me on Instagram</a>
+        <a href="#about_me" class="menu-option" onclick="closeMenu()">Read about me</a>
+        
     </div>
 
     <header class="presentation">
