fixing bugs with video and menu'

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <hr>
             <ul class="list1">
                 <li> Age: <span id="age"></span></li>
-                <li> Adress: Ciudad Autónoma de Buenos Aires (CABA)</li>
+                <li> Address: Ciudad Autónoma de Buenos Aires (CABA)</li>
                 <li> Nationality: Argentina</li>
                 <li><a href="https://wa.me/541139353557?text=Hola%2C%20Federico%2E%20Estuve%20viendo%20tu%20CV%20y%20me%20interesaría%20hablar%20con%20vos" target="_blank"><img src="icons/wpp.svg" class="icon"> Phone: +54 11 39353557</a></li>
                 <li><a href="mailto:fede.2santos_96@hotmail.com"><img src="icons/outlook.svg" class="icon"> Email: fede.2santos_96@hotmail.com</a></li>
@@ -84,7 +84,7 @@
         <div class="lookingFor">
             <h2>Goals</h2>
             <hr>
-            <div class="objetives"><p>I find my self looking for job, mainly for web development, but i'm open to any IT position. I'm studying software engineering in university and, at the same time, learning new techonologies through online courses for being capable of doing amazing things such as this website.</p></div>
+            <div class="objetives"><p>I find myself looking for job, mainly for web development, but I'm open to any IT position. I'm studying software engineering in university and, at the same time, learning new technologies through online courses for being capable of doing amazing things such as this website.</p></div>
         </div>
         <h2>Skills</h2>
         <hr>
