taking off padding from .about_me CSS selector

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <article>
             <h2>Job Experience</h2>
             <hr>
-            <p>Working as SAP Tech Developer trainee in Globant! 💚</p>
+            <p>Working as SAP Tech Developer trainee within Globant! 💚</p>
 
         </article>
         <article>
@@ -93,9 +93,10 @@
             <hr>
             <p>Wishing to finish the Globant's Academy so I can finally work with my SAP team, meet people from diferent countries and work in several projects. Also want to earn many badges in StarmeUp.</p></article>
         </article>
-        <h2>Skills</h2>
-        <hr>
+        
         <div>
+            <h2>Skills</h2>
+            <hr>
             <ul class="list">
                 <li><p>Paradigms: Object Oriented Programming (OOP) & Functional Programming</p></li>
                 <li><p>Programming languages: C, C++, Haskell, Python, Javascript</p></li>
