--- a/index.html
+++ b/index.html
@@ -109,8 +109,16 @@
             <hr>
 
         <div class="education">
-            <div class="place"><a href="https://www.frba.utn.edu.ar/" target="_blank"><img src="icons/utn.svg" class="place_icon"></a></div>
-            <div class="place"><a href="https://www.frba.utn.edu.ar/" target="_blank"><p>UTN-FRBA University</p></a></div>
+            <div class="place">
+                <a href="https://www.frba.utn.edu.ar/" target="_blank">
+                    <img src="icons/utn.svg" class="place_icon">
+                </a>
+            </div>
+            <div class="place">
+                <a href="https://www.frba.utn.edu.ar/" target="_blank">
+                    <p>UTN</p>
+                </a>
+            </div>
             
             <div class="info">
                 <p>Software Engineering: In course</p>
@@ -118,8 +126,16 @@
         </div>
 
         <div class="education">
-            <div class="place"><a href="https://www.schonthal.esc.edu.ar/" target="_blank"><img src="icons/schonthal.svg" class="place_icon"></a></div>
-            <div class="place"><a href="https://www.schonthal.esc.edu.ar/" target="_blank"><p>Schönthal School</p></a></div>
+            <div class="place">
+                <a href="https://www.schonthal.esc.edu.ar/" target="_blank">
+                    <img src="icons/schonthal.svg" class="place_icon">
+                </a>
+            </div>
+            <div class="place">
+                <a href="https://www.schonthal.esc.edu.ar/" target="_blank">
+                    <p>Schönthal</p>
+                </a>
+            </div>
 
             <div class="info"><p>Secondary Education Qualification: Graduated</p></div>
         </div>
