Updating courses & skills. Upgrading CSS .list selector

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="menuHidden" id = "menu">
         <div class="menu-option" id="viewVideo">View Video RESUME</div>
         <div class="menu-option" id="printRESUME">Print RESUME</div>
-        <a href="pdf/Federico dos Santos - RESUME.pdf" download="Federico dos Santos - RESUME" class="menu-option">Download the PDF version</a>
+        <a href="pdf/Federico dos Santos - RESUME.pdf" download="Federico dos Santos - RESUME" class="menu-option">Download PDF</a>
         <a href="https://www.github.com/fede2s/" target="_blank" class="menu-option" onclick="closeMenu()">My Portfolio</a>
         <a href="https://wa.me/541139353557?text=Hola%2C%20Federico%2E%20Estuve%20viendo%20tu%20CV%20y%20me%20interesaría%20hablar%20con%20vos" target="_blank" class="menu-option" id="menu-option" onclick="closeMenu()">Whatsapp me</a>
         <a href="https://www.instagram.com/fede2santos/" target="_blank" class="menu-option" onclick="closeMenu()">Follow me on Instagram</a>
@@ -98,6 +98,8 @@
             <h2>Skills</h2>
             <hr>
             <ul class="list">
+                <li><p>SAP UI5 Development & SAP BW Hana Support</p></li>
+                <li><p>Software Life's Cycles: Scrum & Waterfall</p></li>
                 <li><p>Paradigms: Object Oriented Programming (OOP) & Functional Programming</p></li>
                 <li><p>Programming languages: C, C++, Haskell, Python, Javascript</p></li>
                 <li><p>Other languages: HTML, CSS, MySQL</p></li>
@@ -143,6 +145,31 @@
         
         <h2>Courses</h2>
         <hr>
+
+
+        <div class="education">
+            <div class="place">
+                <a href="https://logaligroup.com/" target="_blank" rel="noopener noreferrer">
+                    <img src="icons/logali.svg" class="place_icon2">
+                </a>
+            </div>
+            <div class="place">
+                <a href="https://logaligroup.com/" target="_blank">
+                    <p>Logali Group</p>
+                </a>
+            </div>
+
+            <div class="info">
+                <p>
+                    <a href="https://academy.logaligroup.com/mod/simplecertificate/verify.php?code=6101c0e2-aa24-493b-960d-51206c3dcfbb" target="_blank">
+                        SAPUI5 Advanced Development
+                    </a>
+                </p>
+            </div>
+        </div>
+
+       
+
         <div class="education">
             <div class="place-big"> 
                 <a href="https://www.scrumstudy.com/" target="_blank" rel="noopener noreferrer">
