Updating CSS styles for skills list

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <header class="presentation">
         <div class="intro">
             <img src="img/profile3.jpg" class="profile">
-            <p>SAP Tech & Studying Software Engineering</p>
+            <p>Software Engineering Student Working at Globant</p>
         </div>
 
         <div class="qr">
