--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             <h2>Information</h2>
             <hr>
             <ul class="list1">
-                <li> Age: <span id="age"></span></li>
+                <li class="field-age"> Age: <span id="age"></span></li>
+                <li class="field-birthdate"> Birthdate: <span id="birthdate"></span></li>
                 <li> Address: Ciudad Autónoma de Buenos Aires (CABA)</li>
                 <li> Nationality: Argentina</li>
                 <li><a href="https://wa.me/541139353557?text=Hola%2C%20Federico%2E%20Estuve%20viendo%20tu%20CV%20y%20me%20interesaría%20hablar%20con%20vos" target="_blank"><img src="icons/wpp.svg" class="icon"> Phone: +54 11 39353557</a></li>
@@ -85,13 +86,13 @@
         <article>
             <h2>Job Experience</h2>
             <hr>
-            <p>Working as SAP Tech Developer trainee within Globant! 💚</p>
+            <p>Working as SAP Tech Developer Junior at Globant! 💚</p>
 
         </article>
         <article>
             <h2>Goals</h2>
             <hr>
-            <p>Wishing to finish the Globant's Academy so I can finally work with my SAP team, meet people from diferent countries and work in several projects. Also want to earn many badges in StarmeUp.</p></article>
+            <p>Find new challenges to learn about new SAP transactions and how to use them. Also want to get certified as bw consultant on SAP Learning hub and SAP ABAP programmer next.</p></article>
         </article>
         
         <div>
